deployments/production/moodtrackerapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moodtrackerapi
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moodtrackerapi
  template:
    metadata:
      labels:
        app: moodtrackerapi
    spec:
      containers:
        - name: moodtrackerapi
          image: ghcr.io/drxxmn/sentimate-api:main
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: moodtrackerapi
  namespace: default
spec:
  selector:
    app: moodtrackerapi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
