deployments/production/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: api-route
  namespace: default
spec:
  parentRefs:
    - name: envoy-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/mood
      backendRefs:
        - group: ""
          kind: Service
          name: moodtrackerapi
          port: 80
          weight: 1
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: supportive-message-route
  namespace: default
spec:
  parentRefs:
    - name: envoy-gateway 
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /SupportiveMessage #service
      backendRefs:
        - group: ""
          kind: Service
          name: supportive-message-producer
          port: 8080
          weight: 1
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: messageservice-route
  namespace: default
spec:
  parentRefs:
    - name: envoy-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /SupportiveMessage/random
      backendRefs:
        - group: ""
          kind: Service
          name: supportive-message-service
          port: 8080
          weight: 1
